--- a/AtkTennisWeb/Views/Shared/_Layout.cshtml
+++ b/AtkTennisWeb/Views/Shared/_Layout.cshtml
@@ -307,9 +307,9 @@
 
 
                                     <li class="nav-item">
-                                        <a href="" class="nav-link">
+                                        <a href="~/AdminHome/MultiReservationCancel" class="nav-link">
                                             <i class="fas fa-table nav-icon"></i>
-                                            <p>Rezervasyon İptal</p>
+                                            <p>Rezervasyonlar - İptal Et</p>
                                         </a>
                                     </li>
 
