--- a/AtkTennisWeb/Views/SystemSettings/EducationSchoolSettings.cshtml
+++ b/AtkTennisWeb/Views/SystemSettings/EducationSchoolSettings.cshtml
@@ -52,7 +52,7 @@
 
                                             <td>
                                                 <button class="btn btn-outline-success" id="@item.SchoolTypesId" onclick="openUpdateschoolType(this.id)"><i class="fas fa-edit"></i></button>
-                                                @*<button class="btn btn-outline-danger" id="@item.SchoolTypesId" onclick="deleteOpenModal(this.id)"><i class="fas fa-trash"></i></button>*@
+                                                <button class="btn btn-outline-danger" id="@item.SchoolTypesId" onclick="deleteOpenModal(this.id)"><i class="fas fa-trash"></i></button>
                                             </td>
                                         </tr>
                                     }
@@ -92,7 +92,7 @@
 
                                             <td>
                                                 <button class="btn btn-outline-success" id="@item.SchoolLevelId" onclick="openUpdateschoolLevel(this.id)"><i class="fas fa-edit"></i></button>
-                                                @*<button class="btn btn-outline-danger" id="@item.SchoolLevelId" onclick="deleteOpenModalLevel(this.id)"><i class="fas fa-trash"></i></button>*@
+                                                <button class="btn btn-outline-danger" id="@item.SchoolLevelId" onclick="deleteOpenModalLevel(this.id)"><i class="fas fa-trash"></i></button>
                                             </td>
                                         </tr>
                                     }
